--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,12 @@
 
 }
 #e{
-  color:#184BC1;
+  color:white;
   font-family:Georgia;
 }
 
 #poo{
-  background-color: #686869;
+  background-color: #746784;
   height: 62px;
   padding-bottom: 0px;
   margin-bottom: 0px;
@@ -43,9 +43,13 @@
   height:60px;
   width: 200px;
   font-size: 30px;
-  background-color:#57AD68;
+  background-color:#184BC1;
+  text-shadow: #924D0C;
   color:white;
-  border: 1px solid #2C92DF;
+  border-right: 1px solid #25014D;
+  border-bottom: 1px solid #491142;
+  border-left: 2px solid #742F34;
+  border-top: 3px solid #924D0C;
   font-family: Georgia;
 }
 
