--- a/partials/members.html
+++ b/partials/members.html
@@ -1,26 +1,9 @@
-<body ng-controller="MainContoller">
-    <div class="container-fluid">
-        <div class="row">
-            <nav id="poo" class="navbar navbar-default">
-                <div class="container-fluid">
-
-                    <div id="logo" class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#"><span id="g">G</Span><span id="e">EEK DATES</span></a>
-                    </div>
-                    <div class="collapse navbar-collapse">
-                        <ul id="options" class="nav navbar-nav navbar-right">
-                            <li><a href="#"><span class="options">Search</span></a></li>
-                            <li><a href="#"><span class="options">My Profile</span></a></li>
-                            <li><a href="#"><span class="options">Logout</span></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
-      </div>
+<div>
+  <div ng-repeat="member in members">
+  <div>
+    <img src="{{member.avatar}}">
+    Username: {{member.username}}<br>
+               {{member.names.firstName}}
+               {{member.names.lastName}}<br>
+               <a href ng-click="showthis = !showthis">showthis</a>
+  </div>
