--- a/partials/register.html
+++ b/partials/register.html
@@ -18,5 +18,9 @@
     <div>
       <label for="lastName" class="form-control">Last Name</label>
       <input type="text" class="form-control" placeholder="Last" ng-model="user.names.lastName"/>
+    </div>
+    <div>
+      <label for="userName" class="form-control">User Name</label>
+      <input type="text" class="form-control" placeholder="User Name" ng-model="user.username"/>
     </div>  
 </div>
