--- a/partials/login.html
+++ b/partials/login.html
@@ -1,5 +1,5 @@
 <div>
-  <h1>Login</h1>
+  <h2>Login</h2>
 </div>
   <div>
     <form class= "form" ng-submit="login()">
@@ -9,12 +9,12 @@
       </div>
       <div class="form-group">
         <label>Password</label>
-        <input ng-model="user.password" class="form-controll" type="password" required>
+        <input ng-model="user.password" class="form-control" type="password" required>
       </div>
       <button type="submit" class="btn btn-primary">Login</button>
     </form>
   <div>
-    <a href='#'>Don't have an account?</a>
+    <a href='#/register'>Don't have an account?</a>
   </div>
 {{ vm.name }}
 </div>
