--- a/partials/register.html
+++ b/partials/register.html
@@ -22,5 +22,16 @@
     <div>
       <label for="userName" class="form-control">User Name</label>
       <input type="text" class="form-control" placeholder="User Name" ng-model="user.username"/>
-    </div>  
+    </div>
+    <div>
+      <label for="dob" class="form-control">Date of Birth</label>
+      <input type="date" class="form-control" ng-model="user.dob" />
+    </div>
+    <div>
+      <label for="phone" class="form-control-label">Phone Number</label>
+      <input type="text" class="form-control" ng-model="user.phone" />
+    </div>
+    <div>
+      <button type="submit" ng-click="register()">Submit</button>
+    </div>
 </div>
